--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next-auth": "^4.24.4",
     "next-themes": "^0.2.1",
     "react": "^18",
+    "react-d3-cloud": "^1.0.6",
     "react-dom": "^18",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7"
