--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "14.0.1",
     "next-auth": "^4.24.4",
     "next-themes": "^0.2.1",
+    "openai": "^4.16.1",
     "react": "^18",
     "react-d3-cloud": "^1.0.6",
     "react-dom": "^18",
