--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-d3-cloud": "^1.0.6",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
+    "string-similarity": "^4.0.4",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
@@ -39,6 +40,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/string-similarity": "^4.0.2",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.1",
