--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
+    "keyword-extractor": "^0.0.28",
     "lucide-react": "^0.292.0",
     "next": "14.0.1",
     "next-auth": "^4.24.4",
